welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var bis = 0
while (estSurBiscuit) {
	avance()
	bis = bis + 1
}
do { 
	if (bis>="3") {
		gauche()
		avance()
	}
	if (bis<="2") {
		droite()
		avance()
	}
	
} while (croisement()=="true")
